# wndlib

./: CMakeLists.txt  LICENSE  README.md
include/: wndlib.h  wndlib_keys.h
sample/: hello_window.cpp
src/: wndlib_win32.cpp
